--- a/04 - Data Cleaning/04-2- Data Cleaning ML/cleaining_ML_Paris.ipynb
+++ b/04 - Data Cleaning/04-2- Data Cleaning ML/cleaining_ML_Paris.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +235,7 @@
        "[5 rows x 31 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +268,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -521,7 +521,7 @@
        "[5 rows x 27 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -539,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -553,7 +553,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -564,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -573,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -780,7 +780,7 @@
        "[5 rows x 22 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -798,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -807,7 +807,7 @@
        "(2922, 22)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -818,7 +818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -849,7 +849,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -860,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -869,7 +869,7 @@
        "'The columns with mmost missing values are: solarrradiation, solarenergy, snow, snowdepth.\\nAs these columns are given in paris I would assume that they are highly correlated and at leat 2 of them can be droped, but to better understand the data I will look at both of them.\\nI decided to drop them as these columns have missing values for more than a half records.'"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -882,7 +882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -892,7 +892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -1069,7 +1069,7 @@
        "4  Rain, Partially cloudy  45.0  20.0  20.0  30.0  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1080,7 +1080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -1107,7 +1107,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1125,7 +1125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -1206,7 +1206,7 @@
        "2607  Partially cloudy  55.0  16.0  26.0  13.0  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1217,7 +1217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1227,7 +1227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -1254,7 +1254,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1272,7 +1272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -1353,7 +1353,7 @@
        "2599      Clear  64.0  25.0  25.0  30.0  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1364,7 +1364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1373,7 +1373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1382,7 +1382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -1408,7 +1408,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1426,7 +1426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -1505,7 +1505,7 @@
        "2599  25.0  25.0  30.0  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1516,7 +1516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -1641,7 +1641,7 @@
        "2600  59.0  22.0  23.0  19.0  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1652,7 +1652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1661,7 +1661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1670,7 +1670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -1795,7 +1795,7 @@
        "2600  59.0  22.0  23.0  19.0  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1813,7 +1813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1822,7 +1822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -1848,7 +1848,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1866,7 +1866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -1881,7 +1881,7 @@
        "Name: conditions, dtype: int64"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1892,7 +1892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -1902,7 +1902,7 @@
        "       'Snow, Partially cloudy', 'Rain, Overcast'], dtype=object)"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1913,7 +1913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1930,7 +1930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -2128,7 +2128,7 @@
        "[5 rows x 22 columns]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2139,7 +2139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2156,7 +2156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2168,7 +2168,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#I will save this version of the file with date for EDA wihich will be perfomed later\n",
+    "paris_ml.to_csv(r'C:\\Users\\radek\\Git-Hub\\Final_Project_Ironhack\\07 - EDA\\Paris_for_EDA.csv', index_label=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2185,7 +2195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -2194,7 +2204,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2227,7 +2237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -2932,7 +2942,7 @@
        "[22 rows x 22 columns]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2943,7 +2953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2957,7 +2967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -3511,7 +3521,7 @@
        "day_of_week       7.370476e-17 -0.019568 -0.018511 -0.001241  1.000000e+00  "
       ]
      },
-     "execution_count": 44,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3523,7 +3533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -3532,7 +3542,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -3564,7 +3574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3573,7 +3583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -3582,7 +3592,7 @@
        "177.0"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3600,7 +3610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3609,7 +3619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -3621,7 +3631,7 @@
        "Name: target, dtype: int64"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3632,7 +3642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -3821,7 +3831,7 @@
        "4         0      1            6      0  "
       ]
      },
-     "execution_count": 51,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3832,7 +3842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
