--- a/04 - Data Cleaning/04-2- Data Cleaning ML/cleaining_ML_Lyon.ipynb
+++ b/04 - Data Cleaning/04-2- Data Cleaning ML/cleaining_ML_Lyon.ipynb
@@ -3188,7 +3188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -3196,12 +3196,11 @@
       "text/plain": [
        "Index(['temp', 'humidity', 'precip', 'windspeed', 'pressure', 'cloudcover',\n",
        "       'visibility', 'uvindex', 'pm25', 'pm10', 'o3', 'no2', 'Clear',\n",
-       "       'Partially cloudy', 'Rain', 'Snow', 'Overcast', 'month', 'day_of_week',\n",
-       "       'target'],\n",
+       "       'Partially cloudy', 'Rain', 'Snow', 'Overcast', 'month', 'day_of_week'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3212,7 +3211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3222,7 +3221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -3458,7 +3457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3467,7 +3466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -3479,7 +3478,7 @@
        "Name: target, dtype: int64"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3490,7 +3489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -3679,7 +3678,7 @@
        "4         0      1            6      0  "
       ]
      },
-     "execution_count": 44,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3690,7 +3689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
