--- a/06 - ML/Lyon_ML.ipynb
+++ b/06 - ML/Lyon_ML.ipynb
@@ -1580,6 +1580,135 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Model predictions for 10.02.2022\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>temp</th>\n",
+       "      <th>humidity</th>\n",
+       "      <th>precip</th>\n",
+       "      <th>windspeed</th>\n",
+       "      <th>pressure</th>\n",
+       "      <th>cloudcover</th>\n",
+       "      <th>visibility</th>\n",
+       "      <th>uvindex</th>\n",
+       "      <th>Clear</th>\n",
+       "      <th>Partially cloudy</th>\n",
+       "      <th>Rain</th>\n",
+       "      <th>Snow</th>\n",
+       "      <th>Overcast</th>\n",
+       "      <th>month</th>\n",
+       "      <th>day_of_week</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>47</th>\n",
+       "      <td>6.0</td>\n",
+       "      <td>77.01</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>11.3</td>\n",
+       "      <td>1015.9</td>\n",
+       "      <td>14.1</td>\n",
+       "      <td>33.2</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    temp  humidity  precip  windspeed  pressure  cloudcover  visibility  \\\n",
+       "47   6.0     77.01     0.0       11.3    1015.9        14.1        33.2   \n",
+       "\n",
+       "    uvindex  Clear  Partially cloudy  Rain  Snow  Overcast  month  day_of_week  \n",
+       "47      0.0      1                 0     0     0         0      2            0  "
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x_test.head(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_today = np.array([8, 74.8, 0, 1.9, 1026,43.5, 14.1, 4,0,1,0,0,0,2,1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\radek\\anaconda3\\lib\\site-packages\\sklearn\\base.py:445: UserWarning: X does not have valid feature names, but ExtraTreesClassifier was fitted with feature names\n",
+      "  warnings.warn(\n",
+      "C:\\Users\\radek\\anaconda3\\lib\\site-packages\\sklearn\\base.py:445: UserWarning: X does not have valid feature names, but ExtraTreesClassifier was fitted with feature names\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([1], dtype=int64)"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "exported_pipeline.predict(x_today.reshape(1,-1))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 29,
    "metadata": {},
