--- a/04 - Data Cleaning/04-2- Data Cleaning ML/cleaining_ML_Paris.ipynb
+++ b/04 - Data Cleaning/04-2- Data Cleaning ML/cleaining_ML_Paris.ipynb
@@ -3610,7 +3610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -3618,12 +3618,11 @@
       "text/plain": [
        "Index(['temp', 'humidity', 'precip', 'windspeed', 'pressure', 'cloudcover',\n",
        "       'visibility', 'uvindex', 'pm25', 'pm10', 'o3', 'no2', 'Clear',\n",
-       "       'Partially cloudy', 'Rain', 'Snow', 'Overcast', 'month', 'day_of_week',\n",
-       "       'target'],\n",
+       "       'Partially cloudy', 'Rain', 'Snow', 'Overcast', 'month', 'day_of_week'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3634,7 +3633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3644,7 +3643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -3880,7 +3879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3889,7 +3888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -3901,7 +3900,7 @@
        "Name: target, dtype: int64"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3912,7 +3911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -4101,7 +4100,7 @@
        "4         0      1            6      0  "
       ]
      },
-     "execution_count": 51,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4112,7 +4111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
