--- a/06 - ML/Paris_ML.ipynb
+++ b/06 - ML/Paris_ML.ipynb
@@ -1240,6 +1240,399 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Predictions for 10.02.2022\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>temp</th>\n",
+       "      <th>humidity</th>\n",
+       "      <th>precip</th>\n",
+       "      <th>windspeed</th>\n",
+       "      <th>pressure</th>\n",
+       "      <th>cloudcover</th>\n",
+       "      <th>visibility</th>\n",
+       "      <th>uvindex</th>\n",
+       "      <th>Clear</th>\n",
+       "      <th>Partially cloudy</th>\n",
+       "      <th>Rain</th>\n",
+       "      <th>Snow</th>\n",
+       "      <th>Overcast</th>\n",
+       "      <th>month</th>\n",
+       "      <th>day_of_week</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>47</th>\n",
+       "      <td>7.1</td>\n",
+       "      <td>80.60</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>16.9</td>\n",
+       "      <td>1013.0</td>\n",
+       "      <td>16.6</td>\n",
+       "      <td>21.5</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>170</th>\n",
+       "      <td>17.4</td>\n",
+       "      <td>63.24</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>16.4</td>\n",
+       "      <td>1020.6</td>\n",
+       "      <td>10.4</td>\n",
+       "      <td>23.2</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>219</th>\n",
+       "      <td>19.6</td>\n",
+       "      <td>90.63</td>\n",
+       "      <td>7.12</td>\n",
+       "      <td>13.3</td>\n",
+       "      <td>1009.9</td>\n",
+       "      <td>24.1</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>163</th>\n",
+       "      <td>20.2</td>\n",
+       "      <td>61.23</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>18.3</td>\n",
+       "      <td>1022.7</td>\n",
+       "      <td>3.4</td>\n",
+       "      <td>20.9</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>816</th>\n",
+       "      <td>9.8</td>\n",
+       "      <td>73.90</td>\n",
+       "      <td>11.39</td>\n",
+       "      <td>27.3</td>\n",
+       "      <td>1009.4</td>\n",
+       "      <td>20.9</td>\n",
+       "      <td>22.4</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     temp  humidity  precip  windspeed  pressure  cloudcover  visibility  \\\n",
+       "47    7.1     80.60    0.00       16.9    1013.0        16.6        21.5   \n",
+       "170  17.4     63.24    0.00       16.4    1020.6        10.4        23.2   \n",
+       "219  19.6     90.63    7.12       13.3    1009.9        24.1        18.0   \n",
+       "163  20.2     61.23    0.00       18.3    1022.7         3.4        20.9   \n",
+       "816   9.8     73.90   11.39       27.3    1009.4        20.9        22.4   \n",
+       "\n",
+       "     uvindex  Clear  Partially cloudy  Rain  Snow  Overcast  month  \\\n",
+       "47       0.0      1                 0     0     0         0      2   \n",
+       "170      0.0      1                 0     0     0         0      6   \n",
+       "219      0.0      0                 1     1     0         0      8   \n",
+       "163      0.0      1                 0     0     0         0      6   \n",
+       "816      0.0      0                 1     1     0         0      3   \n",
+       "\n",
+       "     day_of_week  \n",
+       "47             0  \n",
+       "170            4  \n",
+       "219            4  \n",
+       "163            4  \n",
+       "816            6  "
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x_test.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_today = np.array([6.6, 86, 4.1, 18, 1024, 98, 12.5, 2, 0,0,1,0,1,2,1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>temp</th>\n",
+       "      <th>humidity</th>\n",
+       "      <th>precip</th>\n",
+       "      <th>windspeed</th>\n",
+       "      <th>pressure</th>\n",
+       "      <th>cloudcover</th>\n",
+       "      <th>visibility</th>\n",
+       "      <th>uvindex</th>\n",
+       "      <th>Clear</th>\n",
+       "      <th>Partially cloudy</th>\n",
+       "      <th>Rain</th>\n",
+       "      <th>Snow</th>\n",
+       "      <th>Overcast</th>\n",
+       "      <th>month</th>\n",
+       "      <th>day_of_week</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1176</th>\n",
+       "      <td>8.4</td>\n",
+       "      <td>70.53</td>\n",
+       "      <td>0.21</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>1010.7</td>\n",
+       "      <td>22.1</td>\n",
+       "      <td>23.5</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>840</th>\n",
+       "      <td>13.4</td>\n",
+       "      <td>50.23</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>21.9</td>\n",
+       "      <td>1025.2</td>\n",
+       "      <td>6.7</td>\n",
+       "      <td>21.6</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2676</th>\n",
+       "      <td>10.5</td>\n",
+       "      <td>51.89</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>13.1</td>\n",
+       "      <td>1013.5</td>\n",
+       "      <td>23.2</td>\n",
+       "      <td>21.4</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1968</th>\n",
+       "      <td>17.9</td>\n",
+       "      <td>53.72</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>10.5</td>\n",
+       "      <td>1018.4</td>\n",
+       "      <td>9.5</td>\n",
+       "      <td>23.6</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11111</th>\n",
+       "      <td>6.6</td>\n",
+       "      <td>86.00</td>\n",
+       "      <td>4.10</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>1024.0</td>\n",
+       "      <td>98.0</td>\n",
+       "      <td>12.5</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       temp  humidity  precip  windspeed  pressure  cloudcover  visibility  \\\n",
+       "1176    8.4     70.53    0.21       22.0    1010.7        22.1        23.5   \n",
+       "840    13.4     50.23    0.00       21.9    1025.2         6.7        21.6   \n",
+       "2676   10.5     51.89    0.00       13.1    1013.5        23.2        21.4   \n",
+       "1968   17.9     53.72    0.00       10.5    1018.4         9.5        23.6   \n",
+       "11111   6.6     86.00    4.10       18.0    1024.0        98.0        12.5   \n",
+       "\n",
+       "       uvindex  Clear  Partially cloudy  Rain  Snow  Overcast  month  \\\n",
+       "1176       0.0    0.0               1.0   1.0   0.0       0.0    3.0   \n",
+       "840        0.0    1.0               0.0   0.0   0.0       0.0    4.0   \n",
+       "2676       4.0    0.0               1.0   0.0   0.0       0.0    4.0   \n",
+       "1968       5.0    1.0               0.0   0.0   0.0       0.0    5.0   \n",
+       "11111      2.0    0.0               0.0   1.0   0.0       1.0    2.0   \n",
+       "\n",
+       "       day_of_week  \n",
+       "1176           2.0  \n",
+       "840            2.0  \n",
+       "2676           4.0  \n",
+       "1968           3.0  \n",
+       "11111          1.0  "
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x_test.tail()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_test.loc[11111]=x_today"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\radek\\anaconda3\\lib\\site-packages\\sklearn\\base.py:445: UserWarning: X does not have valid feature names, but BalancedRandomForestClassifier was fitted with feature names\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([2], dtype=int64)"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "brfc.predict(x_today.reshape(1,-1))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### TPOT"
    ]
   },
@@ -1367,6 +1760,36 @@
     "print(confusion_matrix(testing_target,results))\n",
     "print(balanced_accuracy_score(testing_target,results))\n",
     "print(f1_score(testing_target,results, average='weighted'))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\radek\\anaconda3\\lib\\site-packages\\sklearn\\base.py:445: UserWarning: X does not have valid feature names, but ExtraTreesClassifier was fitted with feature names\n",
+      "  warnings.warn(\n",
+      "C:\\Users\\radek\\anaconda3\\lib\\site-packages\\sklearn\\base.py:445: UserWarning: X does not have valid feature names, but ExtraTreesClassifier was fitted with feature names\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([1], dtype=int64)"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "exported_pipeline.predict(x_today.reshape(1,-1))"
    ]
   },
   {
